Update build command

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,7 +30,7 @@ jobs:
         goos: ${{ matrix.goos }}
         goarch: ${{ matrix.goarch }}
         goversion: "https://dl.google.com/go/go1.13.1.linux-amd64.tar.gz"
-        project_path: "./cmd/main"
+        build_command: "go build ./cmd/main.go"
         binary_name: "test-binary"
         compress_assets: OFF
         # extra_files: readme.md
