--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,15 +4,12 @@
 name: Go
 
 on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+  push
 
 jobs:
 
   build:
-    runs-on: [self-hosted, ubuntu-latest]
+    runs-on: [self-hosted, linux]
     steps:
     - uses: actions/checkout@v3
 
@@ -22,4 +19,4 @@ jobs:
         go-version: '1.20'
 
     - name: Build
-      run: go build -v ./cmd/main.go
+        run: go build -v ./cmd/main.go
