--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,7 +9,7 @@ on:
 jobs:
 
   build:
-    runs-on: [self-hosted, linux]
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
 
@@ -19,4 +19,6 @@ jobs:
         go-version: '1.20'
 
     - name: Build
+        run: go get ./cmd
+        run: go get ./disto
         run: go build -v ./cmd/main.go
