--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,4 +23,9 @@ jobs:
     - name: disto deps  
       run: go get ./disto
     - name: build
-      run: go build -v ./cmd/main.go
+      run: go build -v -o distod2 ./cmd/main.go
+    - name: upload 
+      uses: actions/upload-artifact@v4
+      with:
+          name: build
+          path: ./distod2
