--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,31 +1,23 @@
-# This workflow will build a golang project
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-go
-
-name: Go
+# .github/workflows/release.yaml
 
 on:
-  push
+  push:
+  release:
+    types: [created]
+
+permissions:
+    contents: write
+    packages: write
 
 jobs:
-
-  build:
+  release-linux-amd64:
+    name: release linux/amd64
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
-
-    - name: Set up Go
-      uses: actions/setup-go@v4
+    - uses: actions/checkout@v4
+    - uses: wangyoucao577/go-release-action@v1
       with:
-        go-version: '1.22'
-
-    - name: cmd deps
-      run: go get ./cmd
-    - name: disto deps  
-      run: go get ./disto
-    - name: build
-      run: go build -v -o distod2 ./cmd/main.go
-    - name: upload 
-      uses: actions/upload-artifact@v4
-      with:
-          name: build
-          path: ./distod2
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        goos: [linux, windows]
+        goarch: amd64
+        binary_name: "distod2"
